# servant-minimal

./: README.md
servant-minimal/: README.md  servant-minimal.cabal  stack.yaml
servant-minimal/app/: Main.hs
